apps/monitoring/uptime-kuma/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuma
  annotations:
    link.argocd.argoproj.io/external-link: https://kuma.raptor-beta.ts.net
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1
          ports:
            - name: web
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: kuma-data
          livenessProbe:
            exec:
              command:
                - node
                - extra/healthcheck.js
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: web
              scheme: HTTP
            initialDelaySeconds: 20
      volumes:
        - name: kuma-data
          persistentVolumeClaim:
            claimName: kuma-storage
