apps/monitoring/uptime-kuma/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kuma.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: kuma.gruber.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuma-svc
            port:
              name: web
  tls:
  - hosts:
    - kuma.gruber.dev.br
    secretName: kuma-tls
